<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background1"
    tools:context=".activities.MenuActivity">

    <ImageView
        android:id="@+id/backButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/title_activity_nova_reclamacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_activity_nova_reclamacao"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:layout_marginTop="20dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/altblack"
        app:cardCornerRadius="4dp"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:id="@+id/label_tipo_reclamacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_txt_tipo_reclamacao"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/verdeClaro"
            android:layout_marginBottom="4dp"
            android:textSize="24sp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/transparent">

                <Spinner
                    android:id="@+id/spinner_tipos_reclamacao"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp"
                    android:popupBackground="@color/spinnerBoxColor"
                    android:layout_marginEnd="10dp"/>

                <EditText
                    android:id="@+id/edit_text_outro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Digite o tipo da sua reclamação"
                    android:textColorHint="@color/hintColor"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:visibility="invisible"/>


            </FrameLayout>


        <EditText
            android:id="@+id/reclamacao_cliente"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/res_hint_txt_reclamacao"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:background="@color/transparent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btn_enviar_reclamacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ENVIAR RECLAMAÇÃO"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/verdeEscuro"
            />

        </LinearLayout>


    </androidx.cardview.widget.CardView>



</LinearLayout>