<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <ImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/backButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/title_activity_nova_reclamacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_nova_reclamacao"
        app:layout_constraintTop_toBottomOf="@id/backButton2"
        app:layout_constraintStart_toStartOf="@id/cardview_reclamacao"
        app:layout_constraintEnd_toEndOf="@id/cardview_reclamacao"
        android:textSize="34sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
  />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/title_activity_nova_reclamacao"
        android:backgroundTint="@color/altblack"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="4dp"
        android:id="@+id/cardview_reclamacao"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_tipo_reclamacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/res_txt_tipo_reclamacao"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/verdeClaro"
                android:layout_marginBottom="4dp"
                android:textSize="28sp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/transparent">

                <Spinner
                    android:id="@+id/spinner_tipos_reclamacao"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    app:tint="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp"
                    android:popupBackground="@color/spinnerBoxColor"
                    android:layout_marginEnd="10dp"/>

                <EditText
                    android:id="@+id/edit_text_outro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Digite o tipo da sua reclamação"
                    android:textColorHint="@color/hintColor"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:visibility="invisible"/>


            </FrameLayout>


            <EditText
                android:id="@+id/reclamacao_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/res_hint_txt_reclamacao"
                android:textColor="@color/white"
                android:textColorHint="@color/hintColor"
                android:background="@color/transparent"
                android:layout_marginTop="10dp"
                android:textSize="24sp"
                android:lines="3"
                android:gravity="top"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/btn_enviar_reclamacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ENVIAR RECLAMAÇÃO"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/verdeEscuro"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>