<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    >




    <ImageView
        android:id="@+id/logo_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo6"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_novas_reclamacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:elevation="1000dp"
        app:layout_constraintTop_toBottomOf="@id/logo_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:backgroundTint="@color/altblack"
        app:cardCornerRadius="4dp"
        android:layout_marginEnd="10dp">





            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icone1"
                    android:layout_width="32dp"
                    android:layout_height="108dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@color/verdeClaro" />



                <TextView
                    android:id="@+id/lb_title_adicionar_reclamacoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/icone1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/txt_add_reclamacoes"
                    android:textColor="@color/verdeClaro"
                    android:textSize="28sp" />

            </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_minhas_reclamacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_novas_reclamacoes"
        app:layout_constraintStart_toStartOf="parent"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/altblack"
        app:cardCornerRadius="4dp"
        android:layout_marginEnd="10dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icone2"
                android:layout_width="32dp"
                android:layout_height="108dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="100dp"
                android:src="@color/verdeClaro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/lb_title_minhas_reclamacoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/txt_minhas_reclamacoes"
                android:textColor="@color/verdeClaro"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/icone2"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_reclamacoes_comunidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:backgroundTint="@color/altblack"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_minhas_reclamacoes">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icone3"
                android:layout_width="32dp"
                android:layout_height="108dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="100dp"
                android:src="@color/verdeClaro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/lb_title_reclamacoes_comunidades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_reclamacoes_comunidade"
                android:textColor="@color/verdeClaro"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/icone3"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />
    />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>